--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: "Circe-Regular";
+        src: url("./app/fonts/Circe-Regular.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+    }
+    @font-face {
+        font-family: "Circe-ExtraBold";
+        src: url("./app/fonts/Circe-ExtraBold.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+    }
+}
