--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,6 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    p {
+        @apply text-graphite font-base;
+    }
+}
 
 @layer base {
     @font-face {
