--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -6,7 +6,17 @@
 
 @layer base {
     p {
-        @apply text-graphite font-base;
+        @apply text-graphite font-base leading-[22px];
+    }
+}
+
+@layer utilities {
+    .custom-border {
+        border: 1px dashed black;
+    }
+
+    .custom-shadow {
+        box-shadow: 0px 1px 16px 0px rgba(0, 0, 0, 0.16);
     }
 }
 ::-webkit-scrollbar {
